ada update css nya ya

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Web sayaya bukan web kamu</title>
 </head>
 
@@ -16,10 +17,11 @@
             <li class="li-navbar">Name</li>
         </ul>
     </div>
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias nobis placeat aperiam voluptates est esse
-            excepturi officiis sit iusto nulla sunt nemo laborum eveniet, autem consequatur aspernatur corrupti quod
-            consectetur.</p>
+    <div class="container-content">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum explicabo eius amet, nisi sed facere, dolores
+            nam, perferendis numquam hic pariatur esse. Architecto at reprehenderit optio perspiciatis ipsum repudiandae
+            inventore.
+        </p>
     </div>
 </body>
 
