Alhamdulillah update sedikit mah

--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 </head>
 
 <body>
-    <div class="container-navbar">
-        <ul class="ul-navbar">
-            <li class="li-navbar">Home</li>
-            <li class="li-navbar">About</li>
-            <li class="li-navbar">Name</li>
-        </ul>
+    <div class="container">
+        <div class="container-navbar">
+            <ul class="ul-navbar">
+                <li class="li-navbar"><a href="">Home</a></li>
+                <li class="li-navbar"><a href="">About Me</a></li>
+                <li class="li-navbar"><a href="">Subscriber</a></li>
+            </ul>
+        </div>
+        <div class="container-content">
+
+            <img class="img-content" src="produk.png" alt="">
+
+
+        </div>
+
+        <div class="container-footer">
+            <h2 class="h2-content">Copyright Andriyan <span>2023</span></h2>
+        </div>
     </div>
-    <div class="container-content">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum explicabo eius amet, nisi sed facere, dolores
-            nam, perferendis numquam hic pariatur esse. Architecto at reprehenderit optio perspiciatis ipsum repudiandae
-            inventore.
-        </p>
-    </div>
+
 </body>
 
 </html>
